# MIE-443-2024

./: .gitignore  README.md  contest2_output.txt  group1_trial1.yaml  group1_trial2.pgm  parin_test_trial_1.pgm  reset-build.sh  setup.sh  start-amcl.sh  start-follower.sh  start-gazebo.sh  start-gmapping.sh  start-kinect.sh  start-man-ctrl.sh  start-robot.sh  start-rviz.sh  start-soundplay.sh  start-webcam.sh  turtlebot_fix.sh
contest1_maps/tests/: ferdi_test_1.pgm  ferdi_test_2.pgm  ferdi_test_2.yaml  (+2 more)
local_vidstream/: README.md  video_stream_server.py
server-idea/: README.md
src/: compile_commands.json
src/mie443_contest1/mie443_contest1/: CMakeLists.txt
src/mie443_contest1/mie443_contest1/src/: README.md  __robot.cpp  ajeya_test.cpp  contest1.cpp  copy_ajeya_test.cpp  emma_test.cpp  ferdi-readme.md  ferdi_test.cpp  opening_nav.cpp  parin_test.cpp  robot.cpp  robot_test.cpp  robot_v2.cpp
src/mie443_contest1/mie443_contest1/src/include/: ajeya_functions.cpp  assumed_functions.hpp  emma_functions.cpp  ferd_functions.cpp  lin_approx.cpp  lin_approx.hpp  parin_functions.cpp  random_movememnt.hpp
src/mie443_contest1/mie443_contest1/worlds/: world_2.world  world_3.world
src/mie443_contest3/mie443_contest3/: CMakeLists.txt  README.md
src/mie443_contest3/mie443_contest3/include/: kinect_face_detector.hpp
src/mie443_contest3/mie443_contest3/launch/: camera.launch
src/mie443_contest3/mie443_contest3/src/: contest3.cpp  emotion_display_test.cpp  face-detect-run.cpp  kinect_face_detector.cpp  my_publisher_video.cpp  priv-response-test.cpp  stimiuli-test.cpp
src/mie443_contest3/mie443_contest3/src/face_detect/: face_server.cpp  feature_detect.h
src/mie443_contest3/mie443_contest3/src/face_detect/src/: feature_detect.cpp
src/mie443_contest3/mie443_contest3/src/image_handler/: basic_client.cpp  basic_displayer.cpp  image_server.cpp
src/mie443_contest3/mie443_contest3/src/responses/: blocked_path.cpp  family.cpp  lifted.cpp  lost_person.cpp  neutral.cpp  responses.h
src/mie443_contest3/mie443_contest3/src/robot_control/: basic_publishers.cpp  basic_publishers.h  basic_subscriptions.cpp  basic_subscriptions.h  misc_math.h  move_robot.h  program_timer.cpp  program_timer.h  robot.cpp  robot_control.h  robot_move.h
src/mie443_contest3/mie443_contest3/src/robot_control/src/: basic_publishers.cpp  basic_subscriptions.cpp  misc_math.cpp  move_robot.cpp  program_timer.cpp  robot_move.cpp
src/mie443_contest3/mie443_contest3/src/sound_play/: basic_client.cpp
(+40 files in other folders)
